# assetutilities

./: .command-registry.json  .gitignore  .pre-commit-config.yaml  .uvrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_SUMMARY.md  ENHANCED_AGENT_OS_RELEASE.md  GLOBAL_SETUP_COMPLETE.md  GLOBAL_UV_ENVIRONMENT.md  MANIFEST.in  MODULE_STRUCTURE.md  README.md  REQUIREMENTS_MIGRATION.md  TEST_PATH_RESOLUTION_FIX.md  UV_SETUP.md  agents  coordination  coverage.json  distribution_summary.md  global-uv-env.toml  hub-config.yaml  memory  mkdocs.yml  pyproject.toml  pyproject.toml.backup  pytest.ini  requirements-consolidated.txt  requirements.txt  setup_uv_env.sh  slash_commands.py  slash_completion.bash  test-activation.bat  uv.toml
.agent-os/cli/: interactive.py  main.py  progress.py
.agent-os/commands/: __init__.py  agent.py  ai_agent.py  check_module_boundaries.py  create-spec.py  create_module_agent.py  engineering_data_context.py  execute-tasks-enhanced.py  git.py  git_trunk_flow_enhanced.py  install_ecosystem_awareness.py  modernize_deps.py  orcaflex-run-to-sim.py  orcaflex-sim.py  orcaflex-universal.py  organize_structure.py  propagate_commands.py  run_tests_background.py  search_commands.py  spec.py  spec_enhanced.py  sync_all_commands.py  task.py  test-automation-enhanced.py  test.py  test_automation.py  test_automation_enhanced.py  uv_environment_manager.py  verify-ai-work.py  web_resource_manager.py
.agent-os/context/: ai-context.yml  domain-knowledge.yml  project-patterns.yml  team-conventions.yml
.agent-os/instructions/: enhanced-create-spec.md  structure-rules.md
.agent-os/integration/: context_optimizer.py  enhanced_specs.py  workflow_refresh.py
.agent-os/modules/: agent_assignments.py  agent_learning.py  progress_tracker.py  prompt_enhancement.py
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.agent-os/sub-agents/: deployment-agent.md  development-agent.md  testing-agent.md
.agent-os/templates/: CLAUDE_ECOSYSTEM_SECTION.md  git-trunk-flow-config.json
.agent-runtime/agents/: index.yaml
.ai/: AI_GUIDELINES.md
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/memory/: MEMORY.md
.claude/skills/: README.md  data-management~Updated upstream  optimization  pdf-utilities~Updated upstream  plotly-visualization~Updated upstream  product
.command-backups/20250812_160704/: git_trunk_flow.py
.common-commands/: command_registry.py
.drcode/: config.json  droids.yml
.git-commands/: git_manager.py  slash_commands.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dev_tests.yml  library_tests.yml  pages.yml  release.yml  source-hygiene.yml  tests.yml
.planning/plan-approved/: 19.md  30.md  33.md  38.md  39.md  41.md  58.md  60.md  75.md  78.md
.planning/quick/: 2461-pre-delete-grep.out  2461-red-phase.out
.sync-reports/: sync_report_20250812_160704.json
agent_os/cli/: main.py
agent_os/commands/: create_module_agent.py  web_resource_manager.py
agent_os/integration/: prompt_evolution.py  workflow_refresh.py
agents/: index.yaml
agents/Invalid Name/: agent.yaml
agents/benchmark-agent/: agent.yaml
agents/configured-agent/: agent.yaml
agents/custom-structure-agent/: agent.yaml
agents/env-configured-agent/: agent.yaml
agents/fallback-agent/: agent.yaml
agents/invalid-repo-agent/: agent.yaml
agents/partial-agent/: agent.yaml
agents/test-interactive/: agent.yaml
config/: .project-bashrc  env-vars.sh  repo_structure.yml
dev_tools/: au_poetry_create_environment_developer.sh  create_environment_developer.sh  environment.yml  repo_responsibility.md  requirements.txt
dev_tools/au_git_sync/: au_git_clean_stale_local_branches.sh  au_git_clean_stale_local_branches_all_repos.sh  au_git_daily_commit.sh  au_git_daily_commit_all_repos.sh  au_git_resolve_branch_conflicts.sh  au_git_scheduled_task_all_repos.sh  au_git_select_YYYYMM_branch.sh  au_git_select_YYYYMM_branch_all_repos.sh
dev_tools/git/: repo_responsibility.md
docs/: FINAL_STATUS.md  FIXES_SUMMARY_2025.md  README.md  SESSION_COMPLETE_REPORT.md  TEST_BASELINE_2025.md  TROUBLESHOOTING_PROGRESS.md  UV_MIGRATION_REPORT.md  UV_SETUP.md  YAML_ARCHITECTURE_ISSUE.md  agent_os_create_module_agent.md  clean_code.md  developer_guide_create_module_agent.md  logging_loguru_migration.md  software_team_kpis.md  tech-debt-audit.md  units-guide.md
docs/api/: index.md
docs/commands/: CLAUDE_CLI_COMMANDS.md  COMMANDS.md  git-trunk-flow-hooks.md  git-trunk-flow.md  sync-all-commands.md
docs/decisions/: acma-source-files-sync-vs-copy.md
docs/design/: engine-registry-pattern.md
docs/maps/: assetutilities-operator-map.md
docs/modules/: README.md  application_manager.puml
docs/pkg_npp/: intro.md
docs/plans/: 2026-05-05-issue-19-monthly-branch-and-multiuser-merge.md  (+22 more)
results/: data_exploration.yml  data_exploration_column_T.csv  data_exploration_data_type_T.csv  data_exploration_end_value.csv  data_exploration_end_value_T.csv  data_exploration_max_T.csv  data_exploration_mean_T.csv  data_exploration_min_T.csv  data_exploration_no_of_unique_values.csv  data_exploration_no_of_unique_values_T.csv  data_exploration_row_count_T.csv  data_exploration_row_count_per_unique_values_T.csv  data_exploration_start_value_T.csv  data_exploration_stdev_T.csv  data_exploration_unique_values.csv  data_exploration_unique_values_T.csv  file_edit.yml  file_management.yml
scripts/: activate-assetutils-global.bat  activate-assetutils-global.sh  aliases.sh  cross_repo_test.py  deploy-enhanced-agent-os.sh  deploy-enhanced-create-specs.sh  dev-env.sh  distribute_create_module_agent.py  environment.yml  final_test.py  fix_distributed_imports.py  repo_responsibility.md  requirements.txt  setup-cross-repo-integration.py  setup-gitbash.sh  setup-global-env.bat  setup-global-env.sh  simple_test.py  test_global_direct.bat  test_global_env.py  uv_setup.sh
slash_commands/: git_trunk_flow.py
specs/: README.md
tests/: conftest.py  test_casing_grades.py  test_math_helpers.py  test_utils.py  visualizations_tests.bat  visualizations_tests_temp.bat
(+1565 files in other folders)
